Fix spacing around unordered list elements

--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,8 @@ ul {
 }
 
 li {
-  margin-bottom: .5em;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 hr {
